Avoid horizontal scrolling table (as far as it is possible) when longest comment's usernames in list of comments, thanks to Xavier Zalawa (http://www.7studio.fr/) — hint: max-width:1px; is magic!

--- a/admin/style/default.css
+++ b/admin/style/default.css
@@ -1918,6 +1918,10 @@ span.tooltip {
 /** --------------------------------------------------
     Tables and Filters
 --------------------------------------------------- */
+table .maximal {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 1px; }
 table .maximal, table.maximal {
   width: 100%; }
 table .minimal {
